<resources>
    <string name="loading">正在加载中…</string>
    <string name="app_exit">再点击一次Back键退出APP</string>
    <string name="login">登录</string>
    <string name="login_name">用户名</string>
    <string name="login_loading">正在登录&#8230;</string>
    <string name="login_pass_word">密码</string>
    <string name="login_failed">用户名或密码错误</string>
    <string name="login_succeed">登录成功～</string>
    <string name="login_name_empty_error">用户名不能为空～</string>
    <string name="login_name_password_error">密码不能为空～</string>
    <string name="login_register_account">注册账号</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="action_logout">注销账号</string>
    <string name="info_logout">是否确认注销账号？！</string>
    <string name="action_scanner">扫描条形码</string>
    <string name="goods_receive_group">组托收货</string>
    <string name="code_scanner">条形码扫描</string>
    <string name="package_list">包装列表</string>
    <string name="package_list_empty">包装列表为空，请添加包装</string>
    <string name="error_open_camera">打开相机出错!~</string>
    <string name="action_scanner_info">将条码放入框内，即可自动扫描</string>
    <string name="delete_package_item_info">确定删除包装单号： %1$s ？</string>
    <string name="delete_pic_item_info">确定删除拣配单号： %1$s ？</string>
    <string name="submit_receive_info_succeed">包装收货成功！</string>
    <string name="submit_group_receive_info_succeed">组托收货成功！\n交货单号：%1$s</string>
    <string name="ok">确定</string>
    <string name="is">是</string>
    <string name="isnot">否</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="info">提示</string>
    <string name="action_input">手动输入</string>
    <string name="action_input_package_code">请输入包装单号</string>
    <string name="package_code">包装单号</string>
    <string name="loading_query_bar_code_info">正在查询条形码信息&#8230;</string>
    <string name="repeat_package_code_warn">该包装单号已存在！</string>
    <string name="pallet_info">托盘明细</string>
    <string name="package_info">包装明细</string>
    <string name="package_code_format">包装单号：</string>
    <string name="tup_pan_code_format">托盘号：</string>
    <string name="material_id_format">物料号：</string>
    <string name="material_wrkst_format">件号：</string>
    <string name="material_desc_format">物料描述：</string>
    <string name="delivery_num_format">发货数量：</string>
    <string name="delivery_unit_format">单位：</string>
    <string name="supplier_nfo_format">供应商简称：</string>
    <string name="supplier_full_name_format">供应商：</string>
    <string name="delivery_note_code_format">交货单号：</string>
    <string name="delivery_note_code">交货单号</string>
    <string name="action_input_delivery_note_code">请输入交货单号</string>
    <string name="receive_num_format">实收数量：</string>
    <string name="batch_code_format">批次号：</string>
    <string name="storage_unit_position_format">库位：</string>
    <string name="storage_unit_area_format">库存区域：</string>
    <string name="not_match_material_id">物料号不一致，不允许组托！</string>
    <string name="not_match_supplier_info">供应商不一致，不允许组托！</string>
    <string name="not_match_batch_num">批次号不一致，不允许组托！</string>
    <string name="not_match_sl_code">库存地点不一致，不允许组托！</string>
    <string name="not_match_delivery_note_code">交货单号不一致，不允许组托！</string>
    <string name="not_match_join_package_material_id">物料号不一致，不允许合包！</string>
    <string name="not_match_join_package_supplier_info">供应商不一致，不允许合包！</string>
    <string name="not_match_join_package_sl_code">库存地点不一致，不允许合包！</string>
    <string name="not_match_join_package_delivery_note_code">交货单号不一致，不允许合包！</string>
    <string name="batch_number_empty_error">批次号不能为空</string>
    <string name="not_match_third_part_receive_num">非三方物流实收数量不允许大于包装数量!</string>
    <string name="error_package_list_empty">包装为空，不能放入托盘！</string>
    <string name="loading_submit_receive_info">正在上传收货信息&#8230;</string>
    <string name="goods_receive">收货</string>
    <string name="tuo_pan_code">托盘码</string>
    <string name="tuo_pan_code_format">托盘码：</string>
    <string name="submit_receive_info">该托盘有效，确定收货？！</string>
    <string name="title_storage_unit_modify">库位调整</string>
    <string name="qr_code_scanner">二维码扫描</string>
    <string name="storage_unit_position_avlid_modify">新库位有效，点击确定调整库位！</string>
    <string name="loading_modiy_storage_unit_position">库位调整&#8230;</string>
    <string name="storage_unit_position_modify_succeed">库位调整成功！～</string>
    <string name="title_receive_confirm">确认收货</string>
    <string name="action_finish">退出</string>
    <string name="action_receive_confirm">结束收货</string>
    <string name="receive_confirm">确认收货</string>
    <string name="un_receive_package_list">未收货包装列表</string>
    <string name="un_receive_pick_list">未收货拣配单列表</string>
    <string name="receive_sl_code">收货库存地点：</string>
    <string name="action_receive_confirm_info">结束收货，未收货的项目实收数量将置为0</string>
    <string name="package_receive_confirm_succeed">结束收货成功</string>
    <string name="title_storage_unit_info">包装查询</string>
    <string name="material_storage_unit_info">物料库位信息</string>
    <string name="title_under_shelf">下架确认</string>
    <string name="action_input_picklist_code">请输入拣配单号</string>
    <string name="action_input_station_code">请输入工位码</string>
    <string name="picklist_code">拣配单号</string>
    <string name="title_check_bad_product">外检不良品生成拣配单</string>
    <string name="picklist_code_format">拣配单号：</string>
    <string name="title_pick_list_info">拣配单明细</string>
    <string name="action_add_package_or_tuopan">添加包装</string>
    <string name="title_pick_list_add_package">添加包装</string>
    <string name="title_loading_create">创建装车单</string>
    <string name="count_format">数量：</string>
    <string name="under_shelf_count">下架数量</string>
    <string name="pick_list_empty">拣配单列表为空</string>
    <string name="picklist_material_expand">展开物料详情</string>
    <string name="picklist_material_collapse">收起物料详情</string>
    <string name="same_pick_list_error">拣配单已存在，不允许重复添加！</string>
    <string name="action_input_car_code">输入车牌号</string>
    <string name="car_code">车牌号</string>
    <string name="action_scanner_car_code">扫描车牌号</string>
    <string name="picklist_create_empty_error">没有拣配单，不允许装车！</string>
    <string name="loading_submit_pick_list_create">正在创建装车单&#8230;</string>
    <string name="loading_create_data">生成数据&#8230;</string>
    <string name="loading_confirm_under_shelf">正在提交下架明细&#8230;</string>
    <string name="picklist_create_car_number">车辆信息：%1$s，点击确定生成装车单！</string>
    <string name="action_input_picklist">输入拣配单</string>
    <string name="action_scanner_pick_list_code">扫描拣配单</string>
    <string name="pick_list_under_shelf_list_empty">下架明细列表为空</string>
    <string name="confirm_package_or_pallet">确认包装或托盘</string>
    <string name="added_scanner_package_or_pallet">已确认包装或托盘</string>
    <string name="not_match_under_shelf_package">该包装不是当前下架明细所对应的包装！～</string>
    <string name="action_input_under_shelf_check_count">请输入盘点数量</string>
    <string name="action_input_under_shelf_count">请输入下架数量</string>
    <string name="under_shelf_check_count_format">盘点数量：</string>
    <string name="picklist_pull_off_shelf_empty_error">下架明细列表为空，请先扫描拣配单！</string>
    <string name="picklist_pull_off_shelf_no_add_error">下架明细列表未全部确认！</string>
    <string name="under_shelf_package_or_pallet_code">包装号：</string>
    <string name="under_shelf_package_have_parent">供线包装号：</string>
    <string name="package_count_format">包装总数：</string>
    <string name="under_shelf_count_format">下架数量：</string>
    <string name="under_shelf_package_or_pallet_info">下架包装详情</string>
    <string name="storage_unit_state_format">状态：</string>
    <string name="package_state_un_send">未发货</string>
    <string name="package_state_sended">已发货</string>
    <string name="package_state_received">已收货</string>
    <string name="under_shelf_succeed">下架成功！</string>
    <string name="under_shelf_no_match_count">实盘数量和系统数量不一致，请确认是否重新盘点！</string>
    <string name="under_shelf">下架</string>
    <string name="under_shelf_count_error">下架数量必须大于0！</string>
    <string name="loading_query_storage_unit_info">正在查询物料库位信息&#8230;</string>
    <string name="material_storage_unit_empty">物料库存信息为空！</string>
    <string name="area_desc_format">区域描述：</string>
    <string name="position_desc_format">库位描述：</string>
    <string name="material_code_format">物料编码：</string>
    <string name="unit_code_format">存储单元编码：</string>
    <string name="confirm_storage_unit_code">确认库存单元编码</string>
    <string name="confirmed_storage_unit_code">已确认库存单元编码</string>
    <string name="not_match_storage_unit_code_id">库存单元编码不一致，请重新扫描！</string>
    <string name="not_confirm_storage_unit_code">请先确认存储单元编码！</string>
    <string name="loading_query_factory_info">正在查询工厂信息</string>
    <string name="error_get_factory">获取工厂信息失败！是否重新获取？</string>
    <string name="choose_factory">请选择工厂</string>
    <string name="title_picking">生产领料</string>
    <string name="picking_empty">物料信息为空</string>
    <string name="available_num_format">可用数量：</string>
    <string name="use_number_format">领用数量：</string>
    <string name="use_number">领用数量</string>
    <string name="save_user_number">保存领用数量</string>
    <string name="edit_user_number">修改领用数量</string>
    <string name="error_use_number">领用数量必须大于0！</string>
    <string name="error_same_bar_code">该标签已经存在，不能重复添加！</string>
    <string name="loading_cost_center_info">正在获取部门信息</string>
    <string name="action_picking_confirm">领料确认</string>
    <string name="error_no_available_cost_center">该工厂下没有可供选择的部门！</string>
    <string name="search_cost_center">搜索部门</string>
    <string name="title_choose_cost_center">选择部门</string>
    <string name="tap_screen_retry">点击屏幕重新加载！</string>
    <string name="search">搜索</string>
    <string name="error_material_list_empty">请扫描包装或托盘添加库存物料信息！</string>
    <string name="error_save_use_number">请先保存领用物料数量！</string>
    <string name="picking_confirm_format">部门名称：%1$s，\n\n点击确定确认领料！</string>
    <string name="picking_succeed">生产领料成功！</string>
    <string name="loading_confirm_picking">正在提交生产领料信息&#8230;</string>
    <string name="error_use_number_bigger">领用数量不能大于可用数量！</string>
    <string name="action_turn_on_light">打开手电筒</string>
    <string name="action_turn_off_light">关闭手电筒</string>
    <string name="error_under_shelf_count">实际下架数量不能大于包装总数或者计划的下架数量！</string>
    <string name="error_under_shelf_count_less_than_zero">实际下架数量必须大于0！</string>
    <string name="new_version">发现新版本！</string>
    <string name="download_now">正在下载最新版本～</string>
    <string name="error_url">下载地址解析出现异常！</string>
    <string name="pick_source_format">来源：</string>
    <string name="pick_receipt_info_empty">拣配单信息为空</string>
    <string name="delivery_note_info_empty">交货单信息为空</string>
    <string name="material_delivery_count_format">发货数：</string>
    <string name="material_reciprocal_number_format">实收数：</string>
    <string name="storage_unit_code_format">库位码：</string>
    <string name="action_input_storage_unit_code">输入库位码</string>
    <string name="action_scanner_storage_unit_code">扫描库位码</string>
    <string name="st_code_format">工位码：</string>
    <string name="action_input_st_code">输入工位码</string>
    <string name="action_scanner_st_code">扫描工位码</string>
    <string name="action_storage_unit_online">上线确认</string>
    <string name="input_package_code">输入包装单号</string>
    <string name="action_scanner_package_code">扫描包装单号</string>
    <string name="title_shelf_confirm">上架确认</string>
    <string name="action_input_kan_ban_id">输入看板ID</string>
    <string name="action_scanner_kan_ban_id">扫描看板ID</string>
    <string name="action_input_material_id">输入物料号</string>
    <string name="action_out_confirm">确认拉动</string>
    <string name="peisongzu_format">配送组：</string>
    <string name="line_format">线路：</string>
    <string name="out_sto_format">出库库存地点：</string>
    <string name="actionQuery">查询</string>
    <string name="action_add_package_input">输入添加包装</string>
    <string name="action_add_package_scanner">扫描添加包装</string>
</resources>