<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/manualBoardRecyclerView"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_smaller"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_smaller">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/kbCodeInput"
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_height_normal"
            android:text="@string/action_input_kan_ban_id"
            android:textSize="18dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/kbCodeScanner"
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/button_height_normal"
            android:layout_marginLeft="@dimen/spacing_smaller"
            android:text="@string/action_scanner_kan_ban_id"
            android:textSize="18dp" />
    </LinearLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/materialIdInput"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_marginLeft="@dimen/spacing_smaller"
        android:layout_marginRight="@dimen/spacing_smaller"
        android:text="@string/action_input_material_id"
        android:textSize="18dp" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/outConfirm"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_margin="@dimen/spacing_smaller"
        android:text="@string/action_out_confirm"
        android:textSize="18dp" />
</LinearLayout>