<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/spacing_normal"
    android:paddingRight="@dimen/spacing_normal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/packageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clipToPadding="false"
            android:paddingTop="@dimen/spacing_normal" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/packageEmptyTextView"
            style="@style/TextStyle.Heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/package_list_empty"
            android:textSize="20dp" />
    </FrameLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/packageInput"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_gravity="center"
        android:text="@string/action_input"
        android:textSize="22dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/packageScanner"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/action_scanner"
        android:textSize="22dp" />
</LinearLayout>