<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewFlipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/pickListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clipToPadding="false"
            android:padding="@dimen/spacing_smaller" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/pickListInput"
                style="@style/Button.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_smaller"
                android:layout_weight="1"
                android:text="@string/action_input_picklist"
                android:textSize="22dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/pickListScanner"
                style="@style/Button.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_smaller"
                android:layout_weight="1"
                android:text="@string/action_scanner_pick_list_code"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_smaller"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/addPackageInput"
                style="@style/Button.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/spacing_small"
                android:layout_weight="1"
                android:text="@string/action_add_package_input"
                android:textSize="18dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/addPackageButton"
                style="@style/Button.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/action_add_package_scanner"
                android:textSize="18dp" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/underShelfButton"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_smaller"
            android:layout_marginBottom="@dimen/spacing_small"
            android:text="@string/title_under_shelf"
            android:textSize="22dp" />
    </LinearLayout>
</ViewFlipper>