<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewFlipper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_larger">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/spacing_normal"
            android:orientation="horizontal"
            android:paddingRight="@dimen/spacing_larger">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peisongzu_format" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/peisongSpinner"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/spacing_normal"
            android:orientation="horizontal"
            android:paddingRight="@dimen/spacing_larger">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_format" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/lineSpinner"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/spacing_normal"
            android:orientation="horizontal"
            android:paddingRight="@dimen/spacing_larger">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_sto_format" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spSpinner"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/searchButton"
            style="@style/Button.Primary"
            android:layout_width="150sp"
            android:layout_height="@dimen/button_height_tall"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/spacing_larger"
            android:text="@string/actionQuery" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/PCRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</ViewFlipper>